syntax = "proto3";

package client_state; 

import "protos/player.proto";
import "protos/card.proto";

enum StreetStatus {
    Preflop = 0;
    Flop = 1;
    Turn = 2;
    River = 3;
}

enum GameStatus {
    Pause = 0;
    None = 1;
    Active = 2;
}

message Street {
    StreetStatus street_status = 1;
    repeated card.Card cards = 2;
}

message ClientState {
    int32 player_id = 1;
    card.CardPair cards = 2;
    int32 next_player_id = 3;
    int32 lobby_id = 4;
    Street street = 5;
    GameStatus game_status = 6;
    repeated player.Player players = 7;
    repeated player.Player latest_winners = 8;
    int32 min_amount_to_call = 9;
    int32 min_amount_to_raise = 10;
}
