syntax = "proto3";

package game_state;
import "card.proto";

enum StreetStatus {
    Preflop = 0;
    Flop = 1;
    Turn = 2;
    River = 3;
  }

  message Street {
    StreetStatus street_status = 1;
    repeated card.Card cards = 2;
  }

  enum GameStatus {
    Pause = 0;
    None = 1;
    Active = 2;
    WaitingForPlayers = 3;
}


message Winner {
    int32 player_id = 1;
    int32 win_amout = 2;
}

message PlayerCards {
    int32 player_id = 1;
    card.CardPair cards = 2; 
}


message ShowdownOutcome {
    Street streetHistory = 1;
    repeated Winner winners = 2;
    repeated PlayerCards players_cards = 3;
    bool process_flop_automatically = 4;
}

enum ActionType {
  Fold = 0;
  Call = 1;
  Raise = 2;
  Check = 3;
  Blind = 4;
}


message Action {
  ActionType action_type = 1;
  int32 bet = 2;
  int32 player_id = 3;
  optional StreetStatus street_status = 4;
}


